Fixed a bug with the sidebar not popping back out to the right length on smaller sceens. Also removed a few hardcoded scripts, fixed a bug with the top header scrolling downwards when it should be locked, and did some general cleanup.
Overall, I'm going to merge it here and call the sidebar complete. It is
not perfect but it is much much better than it was before and I am happy
with it.

--- a/webrouting/src/main/resources/static/styles/main.css
+++ b/webrouting/src/main/resources/static/styles/main.css
@@ -759,7 +759,7 @@ Simple Class Style For Displaying the Email Message
 	#heading {
 		color: white;
 		min-width:1230px;
-		overflow: auto;
+		overflow: hidden;
 		height: 32px;
 		line-height: 64px;
 		width:110%;
@@ -771,5 +771,6 @@ Simple Class Style For Displaying the Email Message
 	.heading_content{
 		margin-top:-15px;
 		font-size:20px;
+		overflow: hidden;
 	}
 }
